<resources>
    <string name="app_name">Paulig market</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="supplies">Supplies</string>
    <string name="meals">Coffee list</string>
    <string name="add_fourniture">Add supply</string>
    <string name="main_category">Main category</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="arrival_date">arrival date</string>
    <string name="quantity">Quantity</string>
    <string name="supply_type">Supply type</string>
    <string name="supply_code">Supply code</string>
    <string name="supply_name">Supply name</string>
</resources>