<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single"
        android:menuCategory="container">
        <item
            android:id="@+id/nav_supplies"
            android:icon="@drawable/ic_home"
            android:title="@string/supplies" />
        <item
            android:id="@+id/nav_meals"
            android:icon="@drawable/ic_meals"
            android:title="@string/meals" />
    </group>
    <group
        android:id="@+id/grp2"
        android:menuCategory="container"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
    </group>
</menu>